# jade-lang

./: .gitignore  Cargo.toml  README.md
example/: example.jadescript  linked.jadescript
src/: ast.rs  codegen.rs  grammar.rs  jit.rs  lexer.rs  lib.rs  main.rs  parser.rs
tests/: arithmetic.rs  array.rs  boolean.rs  builtins.rs  cast.rs  declare.rs  function.rs  if.rs  lexer.rs  literals.rs  modules.rs  string.rs  structs.rs  while.rs
tests/common/: mod.rs
tests/jade/: example.jade  example.out  string.jade  struct_test.jade
tests/jadescript/: example.jadescript  example.out  linked.jadescript
