[package]
name = "jadec"
authors = ["Amelia Joison <joison.me@gmail.com>"]
version = "0.1.0"
repository = "https://github.com/amnetrine/jade-lang"
edition = "2021"
license = "AGPL-3.0-or-later"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
peg = "0.8.1"
cranelift = "0.89.1"
cranelift-module = "0.89"
cranelift-object = "0.89"
cranelift-jit = "0.89"


clap = { version = "4.0", features = ["derive"] }
either = "1.8"
log = "0.4"
once_cell = "1.16"
pretty_env_logger = "0.4"
